<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World!</string>
    <string name="app_name">活动号外</string>
    <string name="school">学校</string>
    <string name="current_school">当前学校</string>
    <string name="invite">邀请</string>
    <string name="invitation">邀请码</string>
    <string name="in_place">In %1$s</string>
    <string name="pull_to_refresh_pull_label">刷新...</string>
    <string name="pull_to_refresh_release_label">刷新...</string>
    <string name="pull_to_refresh_refreshing_label">载入...</string>
    <string name="pull_to_load_pull_label">更多...</string>
    <string name="pull_up_to_load_pull_label">更多...</string>
    <string name="pull_to_load_release_label">更多...</string>
    <string name="pull_to_load_earlier_pull_label">载入更早的...</string>
    <string name="pull_to_load_earlier_release_label">载入更早的...</string>
    <string name="last_update">"最近更新: "</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="photo">照片</string>
    <string name="signup">注册</string>
    <string name="forgotpassowrd">忘记密码 ?</string>
    <string name="login">登录</string>
    <string name="renrenlogin">人人网登录</string>
    <string name="Profile">个人资料</string>
    <string name="old_user">已注册用户</string>
    <string name="new_user">新用户注册</string>
    <string name="sharing_settings">Sharing settings</string>
    <string name="Account">Account</string>
    <string name="logout_unlink">Logout and unlink account</string>
    <string name="share_to_timeline">Share to Timeline</string>
    <string name="likes">Likes</string>
    <string name="photo_destination">Photo destination</string>
    <string name="post_to">Post to</string>
    <string name="date_info">Date info</string>
    <string name="Nearby">Nearby</string>
    <string name="Conversations">Conversations</string>
    <string name="sms_content">还一个人宅着呢？我现在使用PrettyRich，可以帮我邀约周边的异性共度欢乐时光。非常酷，赶快试试看！免费下载地址：http://xxxxxxx</string>
    <string name="share_weibo">绑定新浪微博</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="share">分享</string>
    <string name="date_title">活动主题</string>
    <string name="title_list">发送列表</string>
    <string name="loading">加载中...</string>
    <string name="tap_to_retry">There\'s a network problem.\nTap to retry.</string>
    <string name="settings">设置</string>
    <string name="studentNo">学号</string>
    <string name="department">院系</string>
    <string name="description">自我介绍</string>
    <string name="educationalStatus">学历</string>
    <string name="constellation">星座</string>
    <string name="hometown">家乡</string>
    <string name="save">保存</string>
    <string name="renren">人人网</string>
    <string name="alreadyBindWithAction">已绑定</string>
    <string name="notyetBindWithAction">未绑定</string>
    <string name="bindNow">现在绑定</string>
    <string name="notBindNow">暂不绑定</string>
    <string name="to_unbind_renren_alert">解除绑定后，你将不能通过人人网账号登入活动号外，你确定要这样做么？</string>
    <string name="to_bind_renren_alert">绑定人人账户，将来你便可以用人人账户来登入活动号外.</string>
    <string name="headerphoto">头像</string>
    <string name="name">姓名</string>
    <string name="height">身高</string>
    <string name="bloodtype">血型</string>
    <string name="edit">编辑</string>
    <string name="logout">退出</string>
    <string name="profile_alert">想知道我的XX项吗？请认真填写你的个人信息，让我们更加了解对方！</string>
    <string name="iam">我是XX</string>
    <string name="logout_alert">你确定要退出么？</string>
    <string name="edit_profile_ok">已经成功修改个人资料</string>
    <string name="report">举报</string>
    <string name="i_want_report">我要举报</string>
    <string name="Subject">主题</string>
    <string name="Time">时间</string>
    <string name="Adress">地点</string>
    <string name="firstNum">已有人数</string>
    <string name="wantNum">邀请人数</string>
    <string name="Treat">消费</string>
    <string name="aa">AA吧</string>
    <string name="my_treat">我请了</string>
    <string name="free">不花钱</string>
    <string name="detail">详情</string>
    <string name="askfor_date_photo">贴张美图，给活动增色！</string>
    <string name="personNum">%1$d 人</string>
    <string name="publish">Publish</string>
    <string name="publish_date">发布活动</string>
    <string name="recommend_date">推荐活动</string>
    <string name="preview">预览</string>
    <string name="location_is_empty">请输入你的活动地点</string>
    <string name="firstNum_is_empty">请输入已有人数</string>
    <string name="wantNum_is_empty">请输入邀请人数</string>
    <string name="title_is_empty">请输入活动主题</string>
    <string name="good_rate_count">靠谱指数%1$d</string>
    <string name="get_invite_code">获取邀请码...</string>
    <string name="publishToRenRen">同步到人人网</string>
    <string name="name_empty">请输入你的用户名</string>
    <string name="school_empty">请输入你的学校</string>
    <string name="hometown_empty">请输入你的家乡</string>
    <string name="invite_code_empty">请输入你的邀请码</string>
    <string name="enter">登录</string>
    <string name="female">女性</string>
    <string name="male">男性</string>
    <string name="first_name">用户名</string>
    <string name="announce_str">注册后，您将可以响应附近的邀请，发布自己的活动信息，和其他用户聊天并浏览其照片，开始您的时尚生活之旅。</string>
    <string name="welcome_str">Welcome to PrettyRich, an exclusive dating network. We know rich and pretty people are out there and they want to date! We are a secure and trustworthy community to help such people to meet and date in real life.</string>
    <string name="password_wrong">密码最少应有6位.</string>
    <string name="no_photo">请上传个人照片.</string>
    <string name="email_wrong">请填写正确的电子邮件.</string>
    <string name="activite">激活</string>
    <string name="activiteAccount">激活帐号</string>
    <string name="alreadychoose">已选中</string>
    <string name="askfor_first_photo">To engage with other PrettyRich users, please upload a photo of yourself. This photo has to include your face.</string>
    <string name="back_notify">Welcome back to PrettyRich. We deeply appreciate the time of loyal users. %1$d credit is added to your account on the day you come back to the app.</string>
    <string name="upload_photo_alert">Every photo is reviewed by PrettyRich team. Please do not upload nudity and improper content. Otherwise, we will permanently ban your account.</string>
    <string name="upload_photo_earn_credit">Congratulations on your first photo upload. You can create your date and respond to others.</string>
    <string name="latest_activity">最新活动</string>
    <string name="date_detail">活动详情</string>
    <string name="i_want">我要加入</string>
    <string name="my_dates">我的活动</string>
    <string name="reply">回复</string>
    <string name="my_profile">我的资料</string>
    <string name="rb_date_filter_left">发布的</string>
    <string name="rb_date_filter_middle">被邀请的</string>
    <string name="rb_date_filter_right">申请中的</string>
    <string name="have_add">加入%1$d人</string>
    <string name="have_apply">申请%1$d人</string>
    <string name="date_responders">响应人</string>
    <string name="message">消息</string>
    <string name="rate">评价</string>
    <string name="confirm_add">批准加入</string>
    <string name="cancel_add">取消资格</string>
    <string name="confirm_date_alert">你确定要将对方加入到此活动吗？</string>
    <string name="cancel_date_alert">你确定要取消对方的活动资格吗？</string>
    <string name="failed_retreive_location_alert">无法获得您的地理信息，请切换到信号更好的位置，或者稍后再试.</string>
    <string name="comment_alert">你觉得对方靠谱么？</string>
    <string name="receiver_confirmed">已成功加入，请活动后给予相应评价</string>
    <string name="change_setting">更改设置</string>
    <string name="back">返回</string>
    <string name="OK">确认</string>
    <string name="Cancel">取消</string>
    <string name="send">发送</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="error_please_try_again_later">请稍后再试</string>
    <string name="no_camera_prompt">您的手机没有摄像头，请在手机相册中选择一张照片</string>
    <string name="photo_gallery">相册</string>
    <string name="time_differentday_withminutes">MM月dd日HH:mm</string>
    <string name="time_sameday">HH:mm</string>
    <string name="time_proposedate">MM月dd日</string>
    <string name="responses">Responses %1$d </string>
    <string name="askfor_date_describe">请填写活动细节，吸引更多的同学来报名参加！</string>
    <string name="time_is_wrong">请选择一个未来的活动时间</string>
    <string name="upload">上传</string>
    <string name="delete">删除</string>
    <string name="loadmore">点击载入更多</string>
    <string name="set_profile_photo">设置头像照</string>
    <string name="camera">相机</string>
    <string name="Gallery">相册</string>
    <string name="minute_ago">1分钟前</string>
    <string name="d_minute_ago">%d 分钟前</string>
    <string name="hour_ago">1小时前</string>
    <string name="d_hour_ago">%d 小时前</string>
    <string name="day_ago">一天前</string>
    <string name="d_day_ago">%d 天前</string>
    <string name="mount_ago">一个月前</string>
    <string name="d_mount_ago">%d 个月前</string>
    <string name="helpstring2">By uploading photos, you will be admired by many others and will earn credits. The more people like your photos, the more credits you will earn.</string>
    <string name="helpstring3">Want to date someone? Create your proposal, search and pick your gorgeous date.</string>
    <string name="ask_details_plan">聊天以了解详细约会安排...</string>
    <string name="sb_send_msg">%1$s 发送了一条消息</string>
    <string name="comment_next_time">暂不评价</string>
    <string name="comment_good">靠谱</string>
    <string name="start_app">开始体验</string>
    <string name="please_choose">请选择</string>
    <string name="err21010">Sorry, you do not have enough credits. To earn them, please upload more photos.</string>
    <string name="err21020">呃...你不能确认两次</string>
    <string name="err21021">呃...你不能确认两次</string>
    <string name="err21022">呃..您已经和另外一个人确认了本次活动!</string>
    <string name="err21023">Hmm, you can\'t confirm twice.</string>
    <string name="err21024">Some other guy has confirmed this date. Remember to take action quickly the next time. Good luck!</string>
    <string name="err21030">This guy has already received your date. Don\'t worry! You don\'t need to send again.</string>
    <string name="err21040">可别把自己的头像照给删了！</string>
    <string name="err21041">你不是已经删过了这张照片嘛！</string>
    <string name="err21042">别想删别人的照片！</string>
    <string name="err21043">你怎么能把别人的照片设置成你的头像照呢？</string>
    <string name="err21044">这张照片涉及到不合适的内容，不能设置成您的个人头像</string>
    <string name="err21045">抱歉，该照片正在等待审核，请等待</string>
    <string name="err21050">You\'ve already followed this guy.</string>
    <string name="err21051">Hmm, I don\'t think this guy is on your follow-list now.</string>
    <string name="err21060">To engage with other PrettyRich users, please upload a photo of yourself. This photo has to include your face.</string>
    <string name="err21070">自己喜欢自己可不算数...</string>
    <string name="err21071">呃...您已经喜欢过这张照片了</string>
    <string name="err21072">呃...你还没喜欢过这张照片</string>
    <string name="err21081">用户名或密码错</string>
    <string name="err21082">该电子邮件地址已经被使用，请重新选择新的电子邮件地址进行注册</string>
    <string name="err10021082">该电子邮件地址已经被使用，如果想把它与当前人人帐号关联，可以用邮件地址登入再在设置中绑定人人帐号</string>
    <string name="err21083">用户名或密码错</string>
    <string name="err21087">由于您的不合规使用，该的账号已经被停用。了解详细情况可发送邮件至support@huodonghaowai.com进行联系</string>
    <string name="err21088">前后端session不一致，用户Id不一致，请重新登陆</string>
    <string name="err21200">只有聚会的发起者才能批准对方加入</string>
    <string name="err21203">只有聚会的发起者才能取消对方加入</string>
    <string name="err21211">邀请码错误，请输入正确的邀请码</string>
    <string name="err21210">抱歉，此邀请码已失效</string>
    <string name="err21212">抱歉，此邀请码已过期</string>
    <string name="err21230">你已经批准了这个响应者加入这个聚会</string>
    <string name="err21231">聚会已经停止</string>
    <string name="err21232">你不是聚会的发起者</string>
    <string name="err21233">你还没有批准这个聚会响应者</string>
    <string name="err21300">这个人人帐号已经被注册</string>
    <string name="err21301">用户已经与这个人人帐号绑定</string>
    <string name="err21302">用户已经与其它的人人帐号绑定</string>
    <string name="err21303">这个人人帐号已经与这个用户绑定</string>
    <string name="err21304">这个人人帐号已经与其他的用户绑定</string>
    <string name="err21305">这个人人帐号尚未与任何用户绑定</string>
    <string name="err21306">这个用户没有绑定任何人人帐号</string>
</resources>