<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/nearbyheaderview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bar" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/old_user"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_back_bg"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/renrenLoginButton"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginTop="48dip"
                android:layout_marginBottom="43dip"
                android:background="@drawable/btn_renren_login_bg"
                android:enabled="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/renrenlogin"
                android:textColor="@color/white"
                android:textSize="16sp" />
            
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dip"
                android:background="@drawable/renren_login_separate_line"
                />
    

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginTop="43dip"
                android:background="@drawable/item_first_normal"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@drawable/item_last_normal"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:imeOptions="actionGo"/>
            </LinearLayout>


            <Button
                android:id="@+id/enterButton"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginTop="16dip"
                android:background="@drawable/btn_signup_bg"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/llForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="8dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forgotpassowrd"
                    android:textColor="@color/font_gray" 
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>