<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/nearbyheaderview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bar" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_back_bg"
                    android:text="@string/back"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dip"
                android:orientation="vertical" >


                <LinearLayout android:id="@+id/layoutRenrenBindState"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:background="@drawable/item_middle_normal"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="70dip"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/renren"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvRenrenBindState"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="right"
                        android:text="@string/notyetBindWithAction"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>


                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dip"
                    android:background="@drawable/btn_signup_bg"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>