<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <android.support.v4.view.ViewPager
        android:id="@+id/vpNearbyDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nearbyheaderview" >
    </android.support.v4.view.ViewPager>

   <!--  <com.lingzhimobile.prettyrich.view.ViewFlow
        android:id="@+id/viewflow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@+id/nearbyheaderview">
    </com.lingzhimobile.prettyrich.view.ViewFlow>--> 

    <RelativeLayout
        android:id="@+id/nearbyheaderview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/latest_activity"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnWant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_3state_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/i_want"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/date_detail"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>