<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/llViewsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none" 
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/RadioGroup01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bar"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RadioButton01"
                style="@style/radiobutton1"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/bottombar_item"
                android:drawableTop="@drawable/rb_nearby_date"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="3dip"
                android:text="@string/latest_activity"
                android:textSize="10sp" 
                android:textColor="@color/white">
            </RadioButton>

            <RadioButton
                android:id="@+id/RadioButton02"
                style="@style/radiobutton1"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/bottombar_item"
                android:drawableTop="@drawable/rb_publish_date"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="3dip"
                android:text="@string/publish_date"
                android:textSize="10sp"
                android:textColor="@color/white" >
            </RadioButton>

            <RadioButton
                android:id="@+id/RadioButton03"
                style="@style/radiobutton1"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/bottombar_item"
                android:drawableTop="@drawable/rb_my_dates"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="3dip"
                android:text="@string/my_dates"
                android:textSize="10sp"
                android:textColor="@color/white" >
            </RadioButton>

            <RadioButton
                android:id="@+id/RadioButton04"
                style="@style/radiobutton1"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@drawable/bottombar_item"
                android:drawableTop="@drawable/rb_profile"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="3dip"
                android:text="@string/my_profile"
                android:textSize="10sp" 
                android:textColor="@color/white">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>